--- a/about.html
+++ b/about.html
@@ -7,6 +7,21 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <link rel="manifest" href="/manifest.json">
+  <link href="images/touch/apple-touch-icon1-32x32.png" rel="shortcut icon">
+
+ 
+
+    <!-- TODO HS-3 - Add to home screen for Safari on iOS -->
+     <!-- Add to home screen for Safari on iOS -->
+     <meta name="apple-mobile-web-app-capable" content="yes">
+     <meta name="apple-mobile-web-app-status-bar-style" content="black">
+     <meta name="apple-mobile-web-app-title" content="Toko Batik Mulyo">
+     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
+ 
+     <!-- Tile icons for Windows -->
+     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+     <meta name="msapplication-TileColor" content="#2F3BA2">
 
   <title>Selamat Datang di Batik Mulyo</title>
 
@@ -29,6 +44,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="gallery.html">Gallery</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="buy.html">Buy</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="about.html">About Us</a>
